--- a/index.html
+++ b/index.html
@@ -354,6 +354,17 @@
             </div>
         </div>
     </footer>
+    <!-- Modals -->
+    <div class="backdrop">
+        <div class="modal">
+            <button class="modal-close-btn">
+                <svg class="modal-close-icon" width="8px" height="8px">
+                    <use href="./images/icons.svg#close-icon"></use> 
+                </svg>
+            </button>
+        </div>
+    </div>
+    <!-- /Modals -->
 </body>
 
 </html>
