--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,12 @@
 
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/app-2.jpg" alt="app-2" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/app-2.jpg" alt="app-2" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Cashless Payment</h2>
                                 <p class="paragraph">Marketing</p>
