--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,12 @@
                 <ul class="portfolio-images-list list">
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/app-1.jpg" alt="app-1" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/app-1.jpg" alt="app-1" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Banking App Interface Concept</h2>
                                 <p class="paragraph">App</p>
@@ -86,7 +91,12 @@
 
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/app-3.jpg" alt="app-3" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/app-3.jpg" alt="app-3" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Meditaion App</h2>
                                 <p class="paragraph">App</p>
@@ -96,7 +106,12 @@
     
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/marketing-1.jpg" alt="marketing-1" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/marketing-1.jpg" alt="marketing-1" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Taxi Service</h2>
                                 <p class="paragraph">Marketing</p>
@@ -106,7 +121,12 @@
 
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/marketing-2.jpg" alt="marketing-2" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/marketing-2.jpg" alt="marketing-2" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Screen Illustrations</h2>
                                 <p class="paragraph">Design</p>
@@ -116,7 +136,12 @@
 
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/marketing-3.jpg" alt="marketing-3" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/marketing-3.jpg" alt="marketing-3" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Online Courses</h2>
                                 <p class="paragraph">Marketing</p>
@@ -126,7 +151,12 @@
     
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/design-1.jpg" alt="design-1" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/design-1.jpg" alt="design-1" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Instagram Stories Concept</h2>
                                 <p class="paragraph">Design</p>
@@ -136,7 +166,12 @@
 
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/design-2.jpg" alt="design-2" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/design-2.jpg" alt="design-2" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Design</h2>
                                 <p class="paragraph">Web Site</p>
@@ -146,7 +181,12 @@
 
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
-                            <img src="./images/design-3.jpg" alt="design-3" width="360">
+                            <div class="portfolio-thumb">
+                                <img src="./images/design-3.jpg" alt="design-3" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Fresh Coffee</h2>
                                 <p class="paragraph">Web Site</p>
