--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="main">
             <div class="container main-container">
                 <h1 class="main-title">Effective Solutions for Your Business</h1>
-                <button type="button" class="main-btn">Order Service</button>
+                <button type="button" class="main-btn" data-modal-open>Order Service</button>
             </div>
         </section>
         <!-- /Main Section -->
@@ -355,9 +355,9 @@
         </div>
     </footer>
     <!-- Modals -->
-    <div class="backdrop">
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="modal-close-btn">
+            <button class="modal-close-btn" data-modal-close>
                 <svg class="modal-close-icon" width="8px" height="8px">
                     <use href="./images/icons.svg#close-icon"></use> 
                 </svg>
@@ -365,6 +365,7 @@
         </div>
     </div>
     <!-- /Modals -->
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
