--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
     <!-- Modals -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="modal-close-btn" data-modal-close>
-                <svg class="modal-close-icon" width="8px" height="8px">
+            <button class="modal-close-btn" type="button" data-modal-close>
+                <svg class="modal-close-icon" width="8" height="8">
                     <use href="./images/icons.svg#close-icon"></use> 
                 </svg>
             </button>
