--- a/portfolio.html
+++ b/portfolio.html
@@ -57,15 +57,13 @@
                         <button type="button" class="portfolio-btn">Marketing</button>
                     </li>
                 </ul>
-
+                <!-- first image -->
                 <ul class="portfolio-images-list list">
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/app-1.jpg" alt="app-1" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Banking App Interface Concept</h2>
@@ -73,14 +71,12 @@
                             </div>
                         </a>
                     </li>
-
+                    <!-- second image -->
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/app-2.jpg" alt="app-2" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Cashless Payment</h2>
@@ -88,14 +84,12 @@
                             </div>
                         </a>
                     </li>
-
+                    <!-- third image -->
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/app-3.jpg" alt="app-3" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Meditaion App</h2>
@@ -103,14 +97,12 @@
                             </div>
                         </a>
                     </li>
-    
+                    <!-- fourth image -->
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/marketing-1.jpg" alt="marketing-1" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Taxi Service</h2>
@@ -118,14 +110,12 @@
                             </div>
                         </a>
                     </li>
-
+                    <!-- fifth image -->
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/marketing-2.jpg" alt="marketing-2" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Screen Illustrations</h2>
@@ -133,14 +123,12 @@
                             </div>
                         </a>
                     </li>
-
+                    <!-- sixth image -->
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/marketing-3.jpg" alt="marketing-3" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Online Courses</h2>
@@ -148,14 +136,12 @@
                             </div>
                         </a>
                     </li>
-    
+                    <!-- seventh image -->
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/design-1.jpg" alt="design-1" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Instagram Stories Concept</h2>
@@ -163,14 +149,12 @@
                             </div>
                         </a>
                     </li>
-
+                    <!-- eighth image -->
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/design-2.jpg" alt="design-2" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Design</h2>
@@ -178,14 +162,12 @@
                             </div>
                         </a>
                     </li>
-
+                    <!-- ninth image -->
                     <li class="portfolio-images-item">
                         <a href="" class="portfolio-link link">
                             <div class="portfolio-thumb">
                                 <img src="./images/design-3.jpg" alt="design-3" width="360">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="portfolio-content">
                                 <h2 class="subtitle portfolio-subtitle">Fresh Coffee</h2>
