--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item"><a href="./index.html" class="header-link link current">Studio</a></li>
-                    <li class="header-item"><a href="portfolio.html" class="header-link link">Portfolio</a></li>
-                    <li class="header-item"><a href="" class="header-link link">Contacts</a></li>
+                    <li class="header-item"><a href="portfolio.html" class="header-link link current">Portfolio</a></li>
+                    <li class="header-item"><a href="" class="header-link link current">Contacts</a></li>
                 </ul>
             </nav>
             <address class="header-adress">
