--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,13 @@
             <nav class="header-nav">
                 <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
                 <ul class="header-list list">
-                    <li class="header-item"><a href="./index.html" class="header-link link">Studio</a></li>
+                    <li class="header-item"><a href="./index.html" class="header-link link current">Studio</a></li>
                     <li class="header-item"><a href="portfolio.html" class="header-link link current">Portfolio</a></li>
-                    <li class="header-item"><a href="" class="header-link link">Contacts</a></li>
+                    <li class="header-item"><a href="" class="header-link link current">Contacts</a></li>
                 </ul>
             </nav>
             <address class="header-adress">
-                <ul class="header-list list">
+                <ul class="header-adress-list list">
                     <li class="header-mail"><a href="mailto:info@devstudio.com" class="header-contacts">info@devstudio.com</a>
                     <li class="header-tel"><a href="tel:+110001111111" class="header-contacts">+11 (000) 111-11-11</a></li>
                 </ul>
